first upload fo changes

--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,97 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
+  background-color: rgb(126, 137, 111);
+  color: black;
+}
+
+header {
+  background-color: rgb(108, 63, 21);
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+header h1 {
+  font-size: 2em;
+  font-weight: 400;
   margin: 0;
+}
+
+#new-player-form-container {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+  margin: 12px auto;
+  font-size: 1.5em;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+#new-player-form input {
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+#new-player-form button {
+  width: 20%;
+  margin: 10px 0px 10px 0px;
+  padding: 10px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.players {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  background-image: url(https://garden.spoonflower.com/c/14794802/p/f/m/zqPc2nSy-79vxf-SVB5PWyNTC6YpC3h9P3k15DLZg39U-6VUCiRdvFGNrWRt/Game%20Day%2C%20Fall%20football%2C%20american%20football.jpg);
+}
+
+.player-card {
+  width: 30%;
+  border: 3px solid black;
+  color: white;
+  border-radius: 12px;
+  font-size: 1.5em;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(108, 63, 21);
+}
+
+.playercard button {
+  width: 30%
+}
+
+img {
+  width: 200px;
+  margin: 10px;
+} 
+
+.nav-links {
+  display: flex;
+  justify-content: space-between;
+  width: 15%
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  margin-right: 8px;
+}
+
+.nav-links a:last-of-type {
+  margin-right: 0;
+}
+
+.nav-links a.active {
+  border-bottom: 1px solid #1c5d76;
 }
