--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,18 @@
-*{
-  padding: 0;
+
+#root {
+  width: 100%;
+  height: 100%;
   margin: 0;
-  box-sizing: border-box;
+  padding: 0;
+  text-align: center;
+  background-color: rgb(126, 137, 111);
+  color: black;
 }
 
 body {
   background-color: rgb(126, 137, 111);
   color: black;
+  margin: 0px;
 }
 
 header {
@@ -22,25 +28,34 @@ header h1 {
   margin: 0;
 }
 
-#new-player-form-container {
+.new-player-form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 70%;
-  margin: 12px auto;
+  width: 100%;
   font-size: 1.5em;
+  color: black;
+  display: flex;
+  background-color: rgb(109, 117, 97);
+  font-weight: bold;
+  border-top: 2px  rgb(97, 104, 86) solid;
 }
 
-#new-player-form input {
+.new-player-form input {
   width: 100%;
   margin: 10px 0;
-  padding: 10px;
+  padding: 5px;
+  font-size: 1.2rem;
 }
 
-#new-player-form button {
-  width: 20%;
-  margin: 10px 0px 10px 0px;
-  padding: 10px;
+.new-player-form button {
+    width: 40%;
+    margin: 10px 0px 10px 0px;
+    padding: 10px;
+    font-size: 1.2rem;
+    background-color: rgb(61, 65, 55);
+    color: white;
+    border: 1px solid black;
 }
 
 .players {
@@ -66,32 +81,61 @@ header h1 {
   background-color: rgb(108, 63, 21);
 }
 
-.playercard button {
-  width: 30%
+.player-card button {
+    width: 40%;
+    margin: 10px 0px 10px 0px;
+    padding: 10px;
+    font-size: 1.2rem;
+    background-color: rgb(157, 110, 66);
+    color: black;
+    border: 3px solid black;
+
 }
 
 img {
-  width: 200px;
-  margin: 10px;
+  width: 300px;
+  margin: 5px;
 } 
 
 .nav-links {
   display: flex;
   justify-content: space-between;
-  width: 15%
+  width: 15%;
+  float: right;
+  top: 5px;
+  right: 0;
+  color: black;
+  padding: 5px;
 }
 
 .nav-links a {
   text-decoration: none;
   color: black;
   font-weight: bold;
-  margin-right: 8px;
+  margin-right: 10px;
 }
 
 .nav-links a:last-of-type {
-  margin-right: 0;
+  margin-left: 0;
 }
 
 .nav-links a.active {
-  border-bottom: 1px solid #1c5d76;
+  border-bottom: 1px solid black;
+}
+
+.searchBar {
+  background-color: rgb(108, 63, 21);
+  width: 100%;
+  padding: 5px;
+  color: white;
+  font-size: 1.4rem;
+  font: bold;
+  border: 0px;
+  border: 2px solid rgb(72, 44, 19);
+
+}
+
+.searchBar input {
+  margin: 0px 0px 0px 12px;
+  font-size: 1.2rem;
 }
